Fix view of delete buttons on mobile version.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -79,3 +79,7 @@ li.row {
   background: transparent;
 }
 */
+.task-description {
+  padding-left: 0;
+  padding-right: 0;
+}
